# daqx

./: LICENSE  README.md  Release Note.md  pyproject.toml  setup.py  test_ground.ipynb
daqx/: basedaq.py  mccdaq.py
examples/: Example_TriggeredAcqWithEventCallback.ipynb  tutorial.ipynb
references/Measurement Computing/ULhelp/: ULHelp.chm  _readme-UL-help.txt
src/: Source code folder.txt  test_ground.ipynb
src/daqx/: __init__ .py  basedaq.py  mccdaq.py  util.py
src/daqx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
