[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "daqx"
version = "0.0.2"
description = "Python data acquisition toolbox - MCC"
keywords = ["acquisition","mcc"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcculw",
    "numpy",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://github.com/wtmtmw/daqx"